--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -224,6 +224,33 @@ main {
     color: #ff4700;
 }
 
+/* Hamburger button styling - Global */
+.navbar-toggler {
+    border: none !important;
+    padding: 0.25rem 0.5rem !important;
+    outline: none !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:focus-visible {
+    box-shadow: none !important;
+    outline: none !important;
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffffff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
+    background-size: 100% !important;
+    width: 1.5rem !important;
+    height: 1.5rem !important;
+    display: inline-block !important;
+}
+
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffffff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M7 7l16 16M23 7L7 23'/%3e%3c/svg%3e") !important;
+}
+
 @media (max-width: 768px) {
     .sidebar {
         width: 100%;
