--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,10 +72,17 @@ body {
     color: var(--principal-1);
 }
 
+.welcome-title {
+    color: var(--principal-1);
+    font-size: 1rem;  
+    margin: 1rem 0;
+    text-align: center;
+    ;
+}
+
 .logotype{
- width: 25%;
+ width: 70%;
  align-items: center;
- filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.2));
  justify-content: center;
 }
 
